--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3",
     "truffle": "5.0.5",
+    "typewriter-effect": "^2.17.0",
     "web3": "1.0.0-beta.55"
   },
   "scripts": {
